add todd to eu15 speakers guide

--- a/app/views/speakers/eu15_speakers_info.html.erb
+++ b/app/views/speakers/eu15_speakers_info.html.erb
@@ -67,7 +67,7 @@
 				<p><strong>Format:</strong> PowerPoint 16 x 9<br></p>
 				<p><strong>Deadline:</strong> Final presentations to be sent to <a href="mailto:todd@lendit.co">todd@lendit.co</a> by 5PM EST on October 15th. In the event last minute changes have been made to your presentation, bring your presentation to the event on a thumb drive and hand the drive to Aaron or Lisa during check-in.</p>
 				<p><strong>Time allotment:</strong> Stick to the allotted time assigned to you (or the chairman will have no choice but to politely cut you off). Leave time for Q&A (often it is the best part!). If your presentation allotment is 30 min, we suggest you leave 10 minutes for Q&A.</p>
-				<p><strong>Taking the stage:</strong> Please approach the AV desk in the back of your presentation room at least 30 minutes prior to your presentation start time so your mic can be placed and tested. Once your mic has been placed, stay in the conference room and sit in one of the front rows close to the stage to ensure a smooth transition between presentations. (No one likes to make a mad dash to the stage). If you wish to perform a test run of your presentation on stage please notify Aaron by October 12th.</p>
+				<p><strong>Taking the stage:</strong> Please approach the AV desk in the back of your presentation room at least 30 minutes prior to your presentation start time so your mic can be placed and tested. Once your mic has been placed, stay in the conference room and sit in one of the front rows close to the stage to ensure a smooth transition between presentations. (No one likes to make a mad dash to the stage). If you wish to perform a test run of your presentation on stage please notify Todd by October 12th.</p>
 				<p><strong>Other:</strong> Do not jam too many data points or text per a slide as they are often hard to see from the back of the ballroom.</p>
 			</div>
 
@@ -115,7 +115,7 @@
 						<a href="mailto:bladimir@lendit.co">Bladimir Estevez, Sponsorship and Group Sales Manager - bladimir@lendit.co</a>
 					</li>
 					<li>
-						<a href="mailto:todd@lendit.co">Todd Anderson, Speaker Manager</a>
+						<a href="mailto:todd@lendit.co">Todd Anderson, Speaker Manager - </a>
 					</li>
 				</ul>
 			</div>
