I had been re-styling the Sched Agenda on the Sched side for the redesign and that caused a little margin issue, which I have fixed here, for the older lenditrails site

--- a/app/views/agendas/eu15.html.erb
+++ b/app/views/agendas/eu15.html.erb
@@ -16,15 +16,13 @@
 		<h1>LendIt Europe 2015 Agenda</h1>
 
 	</div>
-	<a id="sched-embed" href="http://lenditeurope2015.sched.org/">View the LendIt Europe 2015 schedule & directory.</a><script type="text/javascript" src="http://lenditeurope2015.sched.org/js/embed.js"></script>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
+
+	<div class="row">
+		<div class="columns">
+			<a id="sched-embed" href="http://lenditeurope2015.sched.org/">View the LendIt Europe 2015 schedule & directory.</a><script type="text/javascript" src="http://lenditeurope2015.sched.org/js/embed.js"></script>
+		</div>
+
+
+	</div>
 </div>
 
