--- a/app/views/sponsors/eu15.html.erb
+++ b/app/views/sponsors/eu15.html.erb
@@ -179,7 +179,7 @@
 			</div>
 			<div class="sponsors-section">
 				<div class="sponsors-section-head">
-					Welcome Party Sponsors
+					Associate Sponsors
 				</div>
 				<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-3">
 					<% @associates.each do |sponsor| %>
