fix typo; add speakers

--- a/app/views/welcome/networking.html.erb
+++ b/app/views/welcome/networking.html.erb
@@ -34,7 +34,7 @@
 
 				<li>Download the <a href="/attendees">list of companies attending</a> and connect on LinkedIn.</li>
 
-				<li>Check out the attendee list and message other attendees through the <a href="https://event.crowdcompass.com/lendit-usa-2015" target="_blank">LendIt mobile networing app</a>; It can be found on <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=858490125&mt=8" target="_blank">Itunes</a> and <a href="https://play.google.com/store/apps/details?id=com.crowdcompass.app4PWcdwDO6j" target="_blank">Google Play</a>.</li>
+				<li>Check out the attendee list and message other attendees through the <a href="https://event.crowdcompass.com/lendit-usa-2015" target="_blank">LendIt mobile networking app</a>; It can be found on <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=858490125&mt=8" target="_blank">Itunes</a> and <a href="https://play.google.com/store/apps/details?id=com.crowdcompass.app4PWcdwDO6j" target="_blank">Google Play</a>.</li>
 
 				<li>Interact! Get there early and stay late. Maximize your time by attending all of the events around LendIt.</li>
 
