--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -226,6 +226,29 @@
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="columns">
+					<div class="section-hd">
+						Venue Information
+						<div>
+							The Hilton London Metropole
+							225 Edware Rd, London W2 1JU, United Kingdom
+							20-21 October 2015
+						</div>
+						<div>
+							Join us at our Welcome Cocktail Party!
+							The Landmark Hotel
+							19 October 2015
+							6-8 p.m.
+							<p>Tickets required. Email <a href="mailto:lisa@lendit.co" target="_blank">lisa@lendit.co</a> for reservations.</p>
+							<span></span>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+
 
 
 			<div class="row buttonandquote">
@@ -259,7 +282,7 @@
 
 
 				</div>
-				<div class="columns"><div class="buttonandquote-divider"></div></div>
+				<div class="row columns"><div class="buttonandquote-divider"></div></div>
 
 			</div>
 
