update homepage with book hotel CTA

--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -226,7 +226,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row" style="display: none;">
 				<div class="columns">
 					<div class="section-hd">
 						Venue Information
