--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -33,6 +33,7 @@
 				<ul>
 					<!-- <li class="orange"><a href="/register">Register now</a></li> -->
 					<li class="orange"><a href="http://register.lendit.co/d/yrqdh2/4W" onclick="_gaq.push(['_link', 'http://register.lendit.co/d/yrqdh2/4W']); return false;" target="_blank">Register now</a></li>
+					<li><a href="http://www.hilton.com/en/hi/groups/personalized/L/LONMETW-GLEND-20151018/index.jhtml?WT.mc_id=POG" target="_blank">Book hotel</a></li>
 				</ul>
 			</div>
 			<div class="columns small-24 medium-8 large-8 conf conf-usa">
