We added a new Venue Information section to the Europe 2015 main page

--- a/app/assets/stylesheets/_agendas/_europe2015.scss
+++ b/app/assets/stylesheets/_agendas/_europe2015.scss
@@ -1,23 +1,26 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,300italic,300,400italic,700,700italic);
 .agenda-europe2015 {
-.general-background {
-	min-height: 800px;
-}
-	
+	.general-background {
+		min-height: 800px;
+	}
 	body {
 		background:#c00;
 		border:3px solid red;
 	}
 	h1 {
 		line-height:1.1em;
-		margin-bottom:.5em;
+		margin-bottom:1.5em;
 		margin-top:1em;
 		font-family: 'Lato', sans-serif;
 		margin-left:20px;
 		margin-right:20px;
 	}
+	.special-agenda-row {
+		.columns {
+			padding-left:0;
+			padding-right:0;
 
-
-	
-	
+		}
+	}
 }
+
