--- a/app/views/agendas/eu15.html.erb
+++ b/app/views/agendas/eu15.html.erb
@@ -1,28 +1,11 @@
-
 <% body_class "agenda-europe2015" %>
-
-<style type="text/css">
-	.schedorg-body-home#sched-footer-link {
-		display: none;
-	}
-	.sched-share {
-		display:none;
-	}
-</style>
-
 <div class="general-background">  
-
 	<div class="row">
 		<h1>LendIt Europe 2015 Agenda</h1>
-
 	</div>
-
-	<div class="row">
+	<div class="row special-agenda-row">
 		<div class="columns">
 			<a id="sched-embed" href="http://lenditeurope2015.sched.org/">View the LendIt Europe 2015 schedule & directory.</a><script type="text/javascript" src="http://lenditeurope2015.sched.org/js/embed.js"></script>
 		</div>
-
-
 	</div>
 </div>
-
