--- a/app/views/conferences/eu15.html.erb
+++ b/app/views/conferences/eu15.html.erb
@@ -3,20 +3,14 @@
 <% meta_keywords "p2p, online lending, peer-to-peer, LendIt Europe" %>
 <% body_class "europe-2015" %>
 <div class="general-background">
-
-
-<!-- CALL OUT BANNER BEGINS  -->
-
-<%= render "eu15_callout" %>
-<!-- CALL OUT BANNER ENDS -->
-
-
+	<!-- CALL OUT BANNER BEGINS  -->
+	<%= render "eu15_callout" %>
+	<!-- CALL OUT BANNER ENDS -->
 	<div class="hero">
 		<div class="hero-inner">
 			<div class="hero-content">
 				<div class="logo-image">
 					<img src="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/europe-2015-hero-logo2.png" class="logo-image">
-
 				</div>
 				<ul>
 					<!-- 					<li class="grey">
@@ -27,7 +21,7 @@
 							October 20-21, 2015
 						</span>
 					</li> -->
-<!-- 					<li class="green">
+					<!-- 					<li class="green">
 						<a href="/register">Register now</a>
 					</li> -->
 					<li class="green">
@@ -67,9 +61,7 @@
 									<!-- LendIt Europe 2015, Day 2 • P2PFA Summit @ LendIt -->
 								</div>
 							</a>
-
 							<div class="p2pfa-info-text">
-
 								LendIt is partnering with the UK P2P Finance Association on Day 2 of LendIt Europe this year. The P2PFA Summit @ LendIt will bring you a day of unrivaled content and networking.
 							</div>
 						</div>
@@ -82,12 +74,7 @@
 				</div>
 			</div>
 		</div>
-
-
-
-
 		<div class="row conf-intro" data-equalizer="intro" >
-
 			<div class="columns" data-euqlizer-watch="intro">
 				<!-- <div class="small-24 medium-16 large-17 columns" data-equalizer-watch="intro"> -->
 					<div class="conf-intro-text" >
@@ -99,14 +86,8 @@
 						</p>
 					</div>
 				</div>
-
 			</div>
-
 			<%= render 'eu15_speakers' %>
-
-
-
-
 			<div class="row">
 				<div class="columns">
 					<div class="section-hd">
@@ -188,7 +169,6 @@
 						</tr>
 					</table>
 				</div>
-
 				<div class="columns small-24 medium-12 large-8">
 					<table cellspacing="0" class="overview-icons">
 						<tr><td class="special-spacer"></td></tr>
@@ -226,51 +206,79 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row venue-info">
 				<div class="columns">
 					<div class="section-hd">
 						Venue Information
-
 					</div>
-
-					<div>
-							The Hilton London Metropole
-							225 Edware Rd, London W2 1JU, United Kingdom
-							20-21 October 2015
-						</div>
-						<div>
-							Join us at our Welcome Cocktail Party!
-							The Landmark Hotel
-							19 October 2015
-							6-8 p.m.
-							<p>Tickets required. Email <a href="mailto:lisa@lendit.co" target="_blank">lisa@lendit.co</a> for reservations.</p>
-							<span></span>
-						</div>
 				</div>
+				<div class="columns small-24 medium-10 large-12">
+					<div class="info-section info-hotel">
+						<div style="font-weight:600; color:#89be2e; margin-top:2em; text-align:center; text-transform:uppercase; ">
+							The location of the conference:
+							</div>
+						<div class="hilton-image" style="background-image:url(https://s3-us-west-2.amazonaws.com/lendit/europe-2015/hilton.jpg);"></div>
+						<div class="section-intro">
+							
+								<div style="font-weight:bold; margin-top:1em; font-size:20px; ">
+								
+								The Hilton London Metropole
+							</div>
+							
+							<p>
+								225 Edware Rd, London W2 1JU, 
+								<br />
+								United Kingdom
+								<br />
+								20-21 October 2015
+								<br />
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="columns small-24 medium-12 large-12">
+					<div class="info-section info-cocktail">
+						<div style="font-weight:600; color:#89be2e; margin-top:2em; text-align:center; text-transform:uppercase; ">
+								Join us at our Welcome <span style="display:inline-block;">
+									Cocktail Party!
+								</span>
+							</div>
+						<div class="hilton-image" style="background-image:url(https://s3-us-west-2.amazonaws.com/lendit/europe-2015/landmark-hotel.jpg);"></div>
+						<div class="section-intro">
 
+							
 
+								
+							
+								<div style="font-weight:bold; margin-top:1em; font-size:20px; ">
+
+								The Landmark Hotel
+							</div>
+							
+							<p>
+
+								19 October 2015
+								<br />
+								6-8 p.m.
+								<br />
+								Tickets required. Email <a href="mailto:lisa@lendit.co" target="_blank">lisa@lendit.co</a> for reservations.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
-
-
 
 			<div class="row buttonandquote">
 				<div class="columns"><div class="buttonandquote-divider"></div></div>
 				<div class="columns medium-12 large-8">
-
-
-
 					<div class="conf-callout-button">
 						<a href="/europe/2015/sponsors" target-"_blank" class="buttonlink">View Sponsors</a>
 					</div>
-
-
 					<div class="conf-callout-button">
 						<a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/prospectus.pdf" target-"_blank" class="buttonlink">Want to sponsor LendIt Europe?</a>
 					</div>
-
 				</div>
 				<div class="columns medium-12 large-16">
-
 					<div class="conf-quote conf-quote-light" >
 						<strong>
 							"LendIt Europe 2014 was a fantastic event for the industry. LendIt did a great job of bringing all the major names in the European market together for high quality learning and networking in an ideal location."
@@ -279,16 +287,11 @@
 							Nick Moules, Marketing &amp; Communication Manager, rebuildingsociety.com
 						</div>
 					</div>
-
-
-
-
 				</div>
-				<div class="row columns"><div class="buttonandquote-divider"></div></div>
-
+				<div class="columns">
+					<div class="buttonandquote-divider"></div>
+				</div>
 			</div>
-
-
 			<!-- <div class="small-24 medium-8 large-7 columns" >
 				<div class="panel" data-equalizer-watch="intro">
 					<a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/prospectus.pdf" target="_blank">
@@ -297,25 +300,17 @@
 					</a>
 				</div>
 			</div> -->
-
-
-
-
-
-
 			<div class="row">
 				<div class="small-24 medium-24 large-10 columns">
 				</div>
 			</div>
 			<div class="row">
 				<div class="large-24 columns">
-
 				</div>
 			</div>
 			<div class="row conf-callouts" data-equalizer="callouts" >
 				<div class="columns small-24 medium-8 large-8">
 					<div class="panel" data-equalizer-watch="callouts">
-
 						<div class="conf-callout-hd">Attendee Growth</div>
 						<div class="conf-callout-object">
 							<img src="https://s3-us-west-2.amazonaws.com/lendit/conferences/europe-2015/europe-2015-callout-attendance.png" />
@@ -325,11 +320,11 @@
 				<div class="columns small-24 medium-8 large-8">
 					<div class="panel" data-equalizer-watch="callouts">
 						<a href="https://s3-us-west-2.amazonaws.com/lendit/europe-2015/registered-companies.pdf" class="conf-callout-map" target="_blank">
-						<div class="conf-callout-hd"> Attending Companies <i class="fa fa-arrow-circle-right"></i></div>
-						<div class="conf-callout-object">
-							<img src="https://s3-us-west-2.amazonaws.com/lendit/audience-breakdown" />
-						</div>
-					</a>
+							<div class="conf-callout-hd"> Attending Companies <i class="fa fa-arrow-circle-right"></i></div>
+							<div class="conf-callout-object">
+								<img src="https://s3-us-west-2.amazonaws.com/lendit/audience-breakdown" />
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="columns small-24 medium-8 large-8" >
